--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,6 +3,13 @@
   "configurations": [
     {
       "type": "java",
+      "name": "best_time_buy_sell_stock_II",
+      "request": "launch",
+      "mainClass": "algorithms.medium_questions.best_time_buy_sell_stock_II.best_time_buy_sell_stock_II",
+      "projectName": "coding-prac_5d56f404"
+    },
+    {
+      "type": "java",
       "name": "best_time_buy_sell_stock",
       "request": "launch",
       "mainClass": "algorithms.easy_questions.best_time_buy_sell_stock.best_time_buy_sell_stock",
