--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,6 +3,13 @@
   "configurations": [
     {
       "type": "java",
+      "name": "test_test_justification",
+      "request": "launch",
+      "mainClass": "algorithms.hard_questions.text_justification.test_test_justification",
+      "projectName": "coding-prac_5d56f404"
+    },
+    {
+      "type": "java",
       "name": "test",
       "request": "launch",
       "mainClass": "algorithms.easy_questions.reverse_string.test",
