--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,6 +3,13 @@
   "configurations": [
     {
       "type": "java",
+      "name": "ValidPalindromeTest",
+      "request": "launch",
+      "mainClass": "algorithms.easy_questions.valid_palindrome.ValidPalindromeTest",
+      "projectName": "coding-prac_5d56f404"
+    },
+    {
+      "type": "java",
       "name": "test_longest_palindrome",
       "request": "launch",
       "mainClass": "algorithms.easy_questions.longest_palindrome.test_longest_palindrome",
