--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,6 +3,20 @@
   "configurations": [
     {
       "type": "java",
+      "name": "TestBestTimeBuySellStock",
+      "request": "launch",
+      "mainClass": "algorithms.easy_questions.best_time_buy_sell_stock.TestBestTimeBuySellStock",
+      "projectName": "coding-prac_5d56f404"
+    },
+    {
+      "type": "java",
+      "name": "buy_sell_test",
+      "request": "launch",
+      "mainClass": "algorithms.easy_questions.best_time_buy_sell_stock.buy_sell_test",
+      "projectName": "coding-prac_5d56f404"
+    },
+    {
+      "type": "java",
       "name": "ValidPalindromeTest",
       "request": "launch",
       "mainClass": "algorithms.easy_questions.valid_palindrome.ValidPalindromeTest",
